--- a/src/app/components/tables/shared/base-table.scss
+++ b/src/app/components/tables/shared/base-table.scss
@@ -1,11 +1,11 @@
 .table-responsive {
   display: block;
-  width: 100%;
+  min-width: 100%;
+  box-sizing: border-box;
+
   overflow-x: auto;
   overflow-y: scroll;
-
   border-bottom: 1px solid var(--mat-sys-outline);
-
   background-color: rgb(250, 249, 253);
 
   .mat-mdc-table {
@@ -17,6 +17,7 @@
     border-collapse: collapse;
     margin: 0px;
     overflow-x: scroll;
+    table-layout: fixed !important;
   }
 
   .mat-row,
@@ -38,10 +39,15 @@
   }
 
   .scrollable-text {
-    white-space: nowrap;
-    overflow-x: scroll;
     padding-bottom: 4px;
     scrollbar-width: none; /* Firefox */
+    display: inline-block;
+    //width: 80%;
+    //width: inherit;
+    max-width: 80%;
+    white-space: nowrap;
+    overflow-x: auto;
+    text-overflow: ellipsis;
   }
 
   .scrollable-text::-webkit-scrollbar {
@@ -52,11 +58,13 @@
 .table-container {
   display: flex;
 
-  width: max-content;
+  //width: 1100px;
+  width: 100%;
 
-  box-sizing: border-box;
-  padding: 16px;
   flex-direction: column;
+  box-sizing: border-box;
+
+  padding: 16px;
 
   border-radius: var(--mat-sys-corner-extra-large);
   background-color: var(--mat-sys-surface-container-high);
@@ -74,6 +82,25 @@
     border-radius: var(--mat-sys-corner-extra-small);
   }
 }
+
+@media (max-width: 1350px) {
+  .table-container {
+    width: 900px;
+  }
+}
+
+@media (max-width: 1050px) {
+  .table-container  {
+    width: 640px;
+  }
+}
+
+@media (max-width: 440px) {
+  .table-container {
+    width: 100%;
+  }
+}
+
 .cell-width-12 {
   max-width: 12rem;
 }
